--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -1,24 +1,9 @@
 // Bootstrap
 @import "twitter/bootstrap/bootstrap";
 
-// Baseline grid
-@basefont:          13px;
-@baseline:          18px;
-
-// Griditude
-@gridColumns:       15;
-
-// Topbar
-.topbar {
-  & + .page {
-    padding-top: 50px;
-  }
-  .dropdown-toggle {
-     vertical-align: top;
-  }
-  .dropdown-menu {
-    z-index: 9000;
-  }
+// Navbar
+body {
+  padding-top: 40px;
 }
 
 // Media Grid
