Change MediaGrid to Thumbnails.

--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -6,7 +6,7 @@ body {
   padding-top: 40px;
 }
 
-// Media Grid
+// Thumbnails (previously .media-grid up until v1.4)
 .media-grid {
   a {
     &:focus {
