Adjust grid width & margin.

--- a/app/views/media/popular.html.erb
+++ b/app/views/media/popular.html.erb
@@ -7,7 +7,7 @@
     <div class="content span7">
       <%= render partial: "layouts/media-grid-photos", locals: {photos: @photos} %>
     </div>
-    <div class="dashboard span5">
+    <div class="dashboard span4-5 offset0-5">
     </div>
   </div>
 </div>
