--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -8,7 +8,7 @@
       <%= render partial: "layouts/media-grid-photos", locals: {photos: @photos} %>
       <%= render partial: "layouts/page-status", locals: {pagination: @pagination, key: "max_id"} %>
     </div>
-    <div class="dashboard span5">
+    <div class="dashboard span4-5 offset0-5">
       <%= render partial: "layouts/user", locals: {user: @user} %>
     </div>
   </div>
