--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -6,6 +6,14 @@ body {
   padding-top: 40px;
 }
 
+// Grid System
+.span4-5 {
+  width: 340px;
+}
+.offset0-5 {
+  margin-left: 60px;
+}
+
 // Thumbnails (previously .media-grid up until v1.4)
 .media-grid {
   a {
