--- a/app/views/relationships/follows.html.erb
+++ b/app/views/relationships/follows.html.erb
@@ -8,7 +8,7 @@
       <%= render partial: "layouts/media-grid-users", locals: {users: @users} %>
       <%= render partial: "layouts/page-status", locals: {pagination: @pagination, key: "cursor"} %>
     </div>
-    <div class="dashboard span5">
+    <div class="dashboard span4-5 offset0-5">
       <%= render partial: "layouts/user", locals: {user: @user, relationship: @relationship} %>
     </div>
   </div>
