--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -1,6 +1,6 @@
 <div class="user">
   <div class="profile_picture">
-    <%= link_to_external (image_tag user.profile_picture, size: "75x75"), user.profile_picture %>
+    <%= link_to_external (image_tag user.profile_picture, size: "150x150"), user.profile_picture %>
   </div>
   <% if user.full_name.present? %>
   <div class="full-name">
@@ -21,8 +21,6 @@
   <hr />
   <% if @relationship %>
   <div class="relationships-status">
-    <div class="incoming-status <%= @relationship.incoming_status %>">
-    </div>
     <div class="outgoing-status <%= @relationship.outgoing_status %>">
       <div class="relationships-button follow">
         <a href="<%= follow_url(id: user.username) %>" class="btn btn-primary" data-remote="true" data-method="post">
@@ -33,6 +31,11 @@
         <a href="<%= unfollow_url(id: user.username) %>" class="btn btn-success" data-remote="true" data-method="delete">
           Following
         </a>
+      </div>
+    </div>
+    <div class="incoming-status <%= @relationship.incoming_status %>">
+      <div class="relationships-text followed_by">
+        <span class="label">Follows You</span>
       </div>
     </div>
   </div>
