--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -8,7 +8,7 @@
     <h1><%= yield :title %></h1>
   </div>
   <%= form_tag :search, method: :get, class: "form-search" do %>
-  <%= text_field_tag :name, params[:name] %>
+  <%= text_field_tag :name, params[:name], class: "search-query" %>
   <%= submit_tag "Search", class: "btn btn-primary" %>
   <% end %>
   <% if @tags && @users %>
