Refactor html class names.

--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -180,7 +180,7 @@ body {
       .relationships-text {
         display: none;
       }
-      &.followed_by .relationships-text.followed_by {
+      &.followed-by .relationships-text.followed-by {
         display: block;
       }
     }
