--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -1,5 +1,5 @@
 <div class="user">
-  <div class="profile_picture">
+  <div class="profile-picture">
     <%= link_to_external (image_tag user.profile_picture, size: "150x150"), user.profile_picture %>
   </div>
   <% if user.full_name.present? %>
@@ -21,7 +21,7 @@
   <hr />
   <% if @relationship %>
     <div class="relationships-status">
-      <div class="outgoing-status <%= @relationship.outgoing_status %>">
+      <div class="outgoing-status <%= @relationship.outgoing_status.gsub('_', '-') %>">
         <div class="relationships-button follow">
           <a href="<%= follow_url(id: user.username) %>" class="btn btn-primary" data-remote="true" data-method="post">
             Follow
@@ -33,8 +33,8 @@
           </a>
         </div>
       </div>
-      <div class="incoming-status <%= @relationship.incoming_status %>">
-        <div class="relationships-text followed_by">
+      <div class="incoming-status <%= @relationship.incoming_status.gsub('_', '-') %>">
+        <div class="relationships-text followed-by">
           <span class="label">Follows You</span>
         </div>
       </div>
