--- a/app/views/layouts/_tags.html.erb
+++ b/app/views/layouts/_tags.html.erb
@@ -4,7 +4,7 @@
       <td class="name">
         <%= link_to "##{t.name}", tags_url(name: t.name) %>
       </td>
-      <td class="media_count">
+      <td class="media-count">
         <a href="<%= tags_url(name: t.name) %>">
           <span class="count"><%= t.media_count %></span> photos
         </a>
