Add designed by.

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -36,7 +36,7 @@
         <h2>Developer</h2>
       </div>
       <div class="span7">
-        <h3>Created & designed by</h3>
+        <h3>Designed & created by</h3>
         <dl>
           <dt>Kazuya Takeshima</dt>
           <dd>
@@ -50,6 +50,18 @@
           <dd>
             <string>Twitter:</string>
             <a href="http://twitter.com/mitukiii" rel="external nofollow" target="_blank">@mitukiii</a>
+          </dd>
+        </dl>
+        <h3>Designed by</h3>
+        <dl>
+          <dt>Kazuya Kosuge</dt>
+          <dd>
+            <string>Instagram:</string>
+            <a href="/users/kkosuge" rel="external nofollow" target="_blank">@kkosuge</a>
+          </dd>
+          <dd>
+            <string>Twitter:</string>
+            <a href="http://twitter.com/9m" rel="external nofollow" target="_blank">@9m</a>
           </dd>
         </dl>
       </div>
