--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -45,7 +45,7 @@
           </dd>
           <dd>
             <string>Instagram:</string>
-            <a href="/users/mitukiii" rel="external nofollow" target="_blank">@mitukiii</a>
+            <a href="/mitukiii" rel="external nofollow" target="_blank">@mitukiii</a>
           </dd>
           <dd>
             <string>Twitter:</string>
@@ -57,7 +57,7 @@
           <dt>Kazuya Kosuge</dt>
           <dd>
             <string>Instagram:</string>
-            <a href="/users/kkosuge" rel="external nofollow" target="_blank">@kkosuge</a>
+            <a href="/kkosuge" rel="external nofollow" target="_blank">@kkosuge</a>
           </dd>
           <dd>
             <string>Twitter:</string>
