--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <link href="/favicon.ico" rel="shortcut icon" />
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
+    <%= yield :javascript %>
     <%= csrf_meta_tags %>
     <script type="text/javascript">
       <% if authenticated? %>
