Show google maps.

--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -164,6 +164,11 @@ body {
   }
 }
 
+// Dashboard
+.dashboard {
+  padding-bottom: 20px;
+}
+
 // User Dashboard
 .user {
   font-size: 14px;
@@ -206,6 +211,12 @@ body {
   .count {
     font-weight: bold;
   }
+}
+
+// Location Map
+.map {
+  height: 340px;
+  width: 340px;
 }
 
 // Created Time
