--- a/app/views/location/recent.html.erb
+++ b/app/views/location/recent.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, "Location: #{@location.name}" %>
-<% content_for :javascript do %>
+<% content_for :googlemaps do %>
   <%= javascript_include_tag "http://maps.google.com/maps/api/js?sensor=false" %>
 <% end %>
 <div class="container">
