Refactor likes show/hide handling.

--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -77,6 +77,10 @@ body {
         padding: 0 10px;
       }
     }
+    .modal-footer[data-likes-count="0"],
+    .modal-footer[data-comments-count="0"] {
+      display: none;
+    }
     .close {
       margin-top: 0;
     }
