--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -43,42 +43,38 @@
           </span>
         </span>
       </div>
-      <% if p.comments[:count] > 0 %>
-        <div class="modal-footer comments">
-          <% if authenticated? && p.comments[:count] > p.comments.data.size %>
-            <div class="comments-count comments-load-link">
-              <a href="<%= comments_url(id: p.id, format: :html) %>" data-remote="true">
-                view all <span class="count"><%= p.comments[:count] %></span> comments
-              </a>
-            </div>
-          <% else %>
-            <div class="comments-count">
-              <span class="count"><%= p.comments[:count] %></span> comments
-            </div>
-          <% end %>
-          <div class="comments-data">
-            <%= render partial: "layouts/comment", collection: p.comments.data, locals: {photo: p} %>
+      <div class="modal-footer comments" data-comments-count="<%= p.comments[:count] %>">
+        <% if authenticated? && p.comments[:count] > p.comments.data.size %>
+          <div class="comments-count comments-load-link">
+            <a href="<%= comments_url(id: p.id, format: :html) %>" data-remote="true">
+              view all <span class="count"><%= p.comments[:count] %></span> comments
+            </a>
           </div>
-        </div>
-      <% end %>
-      <% if p.likes[:count] > 0 %>
-        <div class="modal-footer likes">
-          <% if authenticated? && p.likes[:count] > p.likes.data.size %>
-            <div class="likes-count likes-load-link">
-              <a href="<%= likes_url(id: p.id, format: :html) %>" data-remote="true">
-                view all <span class="count"><%= p.likes[:count] %></span> likes
-              </a>
-            </div>
-          <% else %>
-            <div class="likes-count">
-              <span class="count"><%= p.likes[:count] %></span> likes
-            </div>
-          <% end %>
-          <div class="likes-data">
-            <%= render partial: "layouts/like", collection: p.likes.data %>
+        <% else %>
+          <div class="comments-count">
+            <span class="count"><%= p.comments[:count] %></span> comments
           </div>
+        <% end %>
+        <div class="comments-data">
+          <%= render partial: "layouts/comment", collection: p.comments.data, locals: {photo: p} %>
         </div>
-      <% end %>
+      </div>
+      <div class="modal-footer likes" data-likes-count="<%= p.likes[:count] %>">
+        <% if authenticated? && p.likes[:count] > p.likes.data.size %>
+          <div class="likes-count likes-load-link">
+            <a href="<%= likes_url(id: p.id, format: :html) %>" data-remote="true">
+              view all <span class="count"><%= p.likes[:count] %></span> likes
+            </a>
+          </div>
+        <% else %>
+          <div class="likes-count">
+            <span class="count"><%= p.likes[:count] %></span> likes
+          </div>
+        <% end %>
+        <div class="likes-data">
+          <%= render partial: "layouts/like", collection: p.likes.data %>
+        </div>
+      </div>
     </div>
   <% end %>
 </div>
