Set opacity when loading.

--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -11,6 +11,12 @@ body {
   padding-top: 40px;
 }
 
+.page {
+  &.loading {
+    opacity: 0.5;
+  }
+}
+
 // Content
 .content {
   min-height: 1px;
