--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -28,6 +28,7 @@
         <h3>Acting on item</h3>
         <ul class="unstyled">
           <li><strong>l:</strong> like / unlike item</li>
+          <li><strong>c:</strong> comment to item</li>
         </ul>
       </div>
     </div>
