Refactor html & css.

--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -120,7 +120,7 @@ body {
       .clearfix();
       margin-top: 10px;
     }
-    .likes-data .group {
+    .likes-data .like {
       float: left;
       width: 50px;
       line-height: 16px;
